# UnifiedMemory

./: .env.example  .gitignore  ARCHITECTURE_REVIEW.md  Dockerfile  README.md  docker-compose.stack.yml  docker-compose.test.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_token_usage_user_id.py
apps/streamlit_demo/: api_client.py  app.py  tenant_registration.py
apps/streamlit_demo/pages/: 1_namespaces.py  2_documents.py  3_chat.py  4_admin.py  5_search.py
config/: app.example.yaml
docker/: Dockerfile.streamlit  entrypoint.sh  prometheus.yml
docs/: README.md  agents-and-chat.md  api-http-and-observability.md  apps-streamlit-demo.md  architecture-overview.md  domain-model-and-types.md  glossary.md  ingestion-pipeline.md  inheritance-class-diagrams.md  namespaces-tenants-auth.md  providers-and-registry.md  rest-api-reference.md  retrieval-and-search.md  security-deployment-and-operations.md  setup-and-configuration.md  storage-and-cas.md  system-context-and-bootstrap.md  system-design-layers.md  testing-strategy.md  workflows.md
docs/mdx/: 00-system-overview.mdx  01-bootstrap-and-providers.mdx  02-ingestion-pipeline.mdx  03-retrieval-fusion-rerank.mdx  04-storage-data-plane.mdx  05-api-tenants-auth-observability.mdx  06-agents-workflows-and-apps.mdx  07-domain-validation-and-quality.mdx  08-configuration-matrix.mdx  README.md
docs/website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/website/src/css/: custom.css
docs/website/src/pages/: index.tsx
src/unified_memory/: __init__.py  bootstrap.py
src/unified_memory/agents/: __init__.py  qa_agent.py
src/unified_memory/api/: __init__.py  app.py  deps.py  schemas.py
src/unified_memory/api/middleware/: context.py
src/unified_memory/api/routes/: admin.py  auth.py  chat.py  ingestion.py  namespaces.py  search.py
src/unified_memory/auth/: __init__.py  jwt_handler.py  password.py
src/unified_memory/cas/: __init__.py  content_store.py  document_content_store.py  document_registry.py  image_content_store.py  registry.py
src/unified_memory/core/: __init__.py  config.py  enums.py  exceptions.py  graph_types.py  ingestion_types.py  interfaces.py  json_utils.py  logging.py  memory_types.py  registry.py  resilience.py  retrieval_types.py  source_types.py  tokenizer.py  type_helpers.py  types.py  utils.py
src/unified_memory/embeddings/: __init__.py  base.py  cache.py
src/unified_memory/embeddings/providers/: __init__.py  mock_provider.py  openai_provider.py
src/unified_memory/ingestion/: __init__.py  pipeline.py
src/unified_memory/ingestion/chunkers/: __init__.py  base.py  fixed_size.py  recursive.py  (+1 more)
src/unified_memory/llm/: base.py  openai_provider.py
src/unified_memory/memory/: __init__.py  base.py
src/unified_memory/namespace/: __init__.py  manager.py  tenant_manager.py  types.py  validation.py
src/unified_memory/observability/: __init__.py  audit.py  tracing.py
src/unified_memory/retrieval/: __init__.py  base.py  dense.py  fusion.py  graph.py  sparse.py  sparse_bm25.py  unified.py  vector.py
src/unified_memory/storage/: __init__.py  base.py
src/unified_memory/workflows/: __init__.py  artifact_store.py  client.py  delete_function.py  error_sanitize.py  events.py  ingest_function.py  job_state.py  serialization.py
tests/: conftest.py
tests/integration/: conftest.py  test_dedup_flow.py  test_delete_flow.py  test_elasticsearch_e2e.py  test_end_to_end.py  test_provenance_merging.py  test_system_context_e2e.py
tests/unit/: conftest.py
tests/unit/api/: test_audit_context.py
tests/unit/cas/: test_document_registry.py  test_ref_count_delete.py  test_registry.py
tests/unit/chunkers/: test_chunkers.py
tests/unit/core/: test_bootstrap.py  test_config_compatibility.py  test_provider_registry.py  test_types.py
tests/unit/embeddings/: test_cache.py  test_provider.py
tests/unit/ingestion/: test_extractors.py  test_parser_registry.py  test_pipeline.py  test_semantic_chunker.py  test_step_methods.py
tests/unit/namespace/: test_manager_validation.py  test_tenant_manager.py  test_validation.py
tests/unit/observability/: test_tracing_token_usage_user.py
tests/unit/retrieval/: test_dense.py  test_fusion.py  test_rerankers.py  test_sparse_bm25.py  test_unified.py  test_unified_filters_and_fusion.py
tests/unit/sql/: test_session_manager.py
tests/unit/storage/: test_graph_store.py  test_kv_store.py  test_vector_store.py
tests/unit/workflows/: test_error_sanitize.py
(+26 files in other folders)
