[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-memory-system"
version = "0.1.0"
description = "Unified, multi-tenant, multimodal memory system implementing the UNIFIED_MEMORY_SYSTEM_DESIGN."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Mufasa", email = "you@example.com" }
]
dependencies = [
  "numpy>=1.26",
  "typing_extensions>=4.10.0",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "mypy>=1.8",
]
rerankers = [
  "cohere>=4.0.0",
  "sentence-transformers>=2.2.0",
]
databases = [
  "qdrant-client>=1.7.0",
  "neo4j>=5.0.0",
  "redis>=5.0.0",
]

[project.urls]
Homepage = "https://example.com/unified-memory-system"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
addopts = "-p no:anyio"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
