[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-memory-system"
version = "0.1.0"
description = "Unified, multi-tenant, multimodal memory system implementing the UNIFIED_MEMORY_SYSTEM_DESIGN."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Mufasa", email = "you@example.com" }
]
dependencies = [
  "numpy>=1.26",
  "typing_extensions>=4.10.0",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "mypy>=1.8",
]
rerankers = [
  "cohere>=4.0.0",
  "sentence-transformers>=2.2.0",
]
databases = [
  "qdrant-client>=1.7.0",
  "neo4j>=5.0.0",
  "redis>=5.0.0",
  "elasticsearch>=8.0.0,<9.0.0",
  "aiohttp>=3.8.0",
]
openai = [
  "openai>=1.0.0",
  "langchain-openai>=0.1.0",
  "langchain-core>=0.2.0",
]
pdf = [
  "pymupdf>=1.24.0",
]
mineru = [
  "mineru[pipeline]",
  "Pillow>=10.0.0",
  "numpy==2.0.1",
]
all = [
  "unified-memory-system[databases,openai,rerankers,pdf,dev]",
]
server = [
  "unified-memory-system[all]",
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "aiosqlite>=0.19.0",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://example.com/unified-memory-system"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
addopts = "-p no:anyio"
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
