[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-memory-system"
version = "0.1.0"
description = "A multi-tenant, multimodal-aware memory layer for LLM applications"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Abdissa Degefu", email = "abdissadegefu1@gmail.com" }
]
dependencies = [
  "numpy>=1.26",
  "typing_extensions>=4.10.0",
  "rank-bm25>=0.2.2",
  "json-repair==0.51.0",
  "jsonschema==4.23.0",
  "tiktoken>=0.7.0",
  "tenacity>=9.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "mypy>=1.8",
]
rerankers = [
  "cohere>=4.0.0",
  "sentence-transformers>=2.2.0",
]
databases = [
  "qdrant-client>=1.7.0",
  "neo4j>=5.0.0",
  "redis>=5.0.0",
  "elasticsearch>=8.0.0,<9.0.0",
  "aiohttp>=3.8.0",
]
openai = [
  "openai>=1.0.0",
  "langchain-openai>=0.1.0",
  "langchain-core>=0.2.0",
]
pdf = [
  "pymupdf>=1.24.0",
]
mineru = [
  "mineru[pipeline]==2.7.6",
  "Pillow>=10.0.0",
  "numpy==2.0.1",
  "scipy==1.17.1",
  "scikit-learn==1.8.0"
]
workflows = [
  "inngest>=0.5.0",
]
all = [
  "unified-memory-system[databases,openai,mineru,rerankers,pdf,dev]",
]
server = [
  "unified-memory-system[all,workflows]",
  "alembic>=1.13.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "aiosqlite>=0.19.0",
  "asyncpg>=0.29.0",
  "pyyaml>=6.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib==1.7.4",
  "bcrypt==3.2.2",
  "python-multipart>=0.0.5",
  "structlog>=23.0.0",
  "prometheus-client==0.24.1"
]
streamlit = [
  "streamlit>=1.30.0",
  "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://example.com/unified-memory-system"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
addopts = "-p no:anyio"
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
